force-app/main/default/objects/RDPricingQtyDscMulti__c/RDPricingQtyDscMulti__c.object-meta.xml
<CustomObject>
    <label>RDPricingQtyDscMulti</label>
    <nameField>
        <label>RD QtyDscPricing</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDPricingQtyDscMulti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>