force-app/main/default/objects/RDPricingQtyDscMulti__c/fields/DiscountMulti__c.field-meta.xml
<CustomField>
    <fullName>DiscountMulti__c</fullName>
    <label>DiscountMulti</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>