force-app/main/default/objects/RDPricingQtyDscMulti__c/fields/QtyLL__c.field-meta.xml
<CustomField>
    <fullName>QtyLL__c</fullName>
    <label>QtyLL</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>